Correct lots of little typographical and spelling errors.

--- a/doc/rdebug.1
+++ b/doc/rdebug.1
@@ -159,7 +159,7 @@ Connect to a remote debugger. Used with another rdebug invocation using \-\-serv
 See also \-\-host and \-\-cport options
 .TP
 .B \-\-cport=PORT
-Port used for contol commands.
+Port used for control commands.
 .TP
 .B \-d | \-\-debug
 Set $DEBUG true.
